tests/array_literals_readonly_nonconst_bad.hop
// Verifies readonly array literal storage requires const elements.
fn main(x int) {
	var a &[int] = [1, x]
	_ = a
}
